--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "font-awesome": "^4.7.0",
     "vue": "^3.2.13",
     "vue-router": "^4.4.5",
+    "vue3-google-login": "^2.0.33",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
