--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "@azure/msal-browser": "^3.25.0",
     "core-js": "^3.8.3",
     "font-awesome": "^4.7.0",
+    "gapi-script": "^1.2.0",
+    "googleapi": "^1.0.2",
+    "jwt-decode": "^4.0.0",
+    "util": "^0.12.5",
     "vue": "^3.2.13",
     "vue-router": "^4.4.5",
     "vue3-google-login": "^2.0.33",
